--- a/validate.ipynb
+++ b/validate.ipynb
@@ -13,7 +13,7 @@
     "        dtd = etree.DTD(f)\n",
     "    doc = etree.parse(xml_path)\n",
     "    ok = dtd.validate(doc)\n",
-    "    print(f\"Validating {xml_path} ->\", \"PASS ✅\" if ok else \"FAIL ❌\")\n",
+    "    print(f\"Validating {xml_path} ->\", \"PASS\" if ok else \"FAIL\")\n",
     "    if not ok:\n",
     "        for e in dtd.error_log:\n",
     "            print(f\"Line {e.line}: {e.message}\")\n",
